--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,7 +12,8 @@
 		"Zignd.html-css-class-completion",
 		"pranaygp.vscode-css-peek",
 		"AnbuselvanRocky.bootstrap5-vscode",
-		"yzhang.markdown-all-in-one"
+		"yzhang.markdown-all-in-one",
+		"hookyqr.beautify"
 	],
 
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
